# DTMS

./: Cargo.toml  MICROSERVICE_PLAYBOOK.md  README.md
apps/task-service/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/task-service/migrations/: 0001_create_tasks.sql
apps/task-service/src/: main.rs
apps/task-service/src/config/: mod.rs
apps/task-service/src/domain/: mod.rs
apps/task-service/src/handlers/: mod.rs  openapi.rs
apps/task-service/src/infrastructure/: mod.rs
apps/task-service/src/infrastructure/nats/: mod.rs
apps/task-service/src/infrastructure/telemetry/: mod.rs
apps/task-service/src/repository/: mod.rs
apps/task-service/src/service/: mod.rs
