[package]
name = "task-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "task-service"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "trace", "request-id", "util"] }
hyper = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"
config = "0.15.25"

# OpenAPI
utoipa = { version = "5.5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# NATS
async-nats = "0.49.1"

# Tracing / OpenTelemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.33.0"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.32.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
